# cw

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
migrations/: 20241125094701_create_query_history.sql
src/: args.rs  aws.rs  config.rs  cw.rs  db.rs  editor.rs  main.rs  utils.rs
src/commands/: info.rs  list.rs  mod.rs  query.rs  tail.rs
src/http/: client.rs  mod.rs  timeout.rs
src/logging/: formatters.rs  logger.rs  mod.rs  sinks.rs
src/proxy/: mod.rs  stream.rs  tunnel.rs
