[package]
name = "cw"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.74"
aws-sdk-cloudwatchlogs = "1.83"
aws-sdk-sts = "1.69"
aws-smithy-async = "1.2.5"
aws-smithy-runtime-api = { version = "1.8.0", features = ["client"] }
aws-smithy-types = "1.3.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["cargo", "derive"] }
eyre = "0.6.12"
futures-util = "0.3.31"
h2 = "0.4.10"
headers = "0.4.0"
http = "1.2.0"
humantime = "2.1.0"
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http2", "http1", "native-tokio", "tls12"] }
hyper-util = "0.1.12"
pin-project-lite = "0.2.16"
rustls = { version = "0.23",  features = ["default"] }
rustls-native-certs = { version = "0.8" }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.12.0", features = ["std"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
tower = "0.5.2"
tower-service = "0.3.3"
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
