[package]
name = "cw"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.94"
aws-sdk-cloudwatchlogs = "1.105"
aws-sdk-sts = "1.88"
aws-smithy-http-client = { version = "1.1.3", features = ["default-client", "rustls-aws-lc"] }
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["cargo", "derive"] }
eyre = "0.6.12"
futures-util = "0.3.31"
humantime = "2.3.0"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
yansi = { version = "1.0.1", features = ["detect-tty"] }
tabwriter = "1.4.1"
terminal_size = "0.4.3"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
